dnl $Id: configure.in,v 1.6 2001/09/18 02:18:37 james Rel james $	
dnl Process this file with autoconf to produce a configure script.
AC_INIT(tcpxd.c)
AM_INIT_AUTOMAKE(tcpxd, 1.4)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h sys/time.h unistd.h)

dnl Checks for library functions.
AC_CHECK_LIB(socket, main)
AC_CHECK_LIB(resolv, main)
AC_CHECK_LIB(nsl, main)
AC_CHECK_FUNCS(select socket strdup strerror gethostbyname herror inet_aton)

AC_OUTPUT(Makefile)
